# botornot

./: README.md
botornot/: .pre-commit-config.yaml  pyproject.toml
botornot/botornot/api/: main.py
botornot/botornot/api/v1/: main.py
