[tool.poetry]
name = "botornot"
version = "0.1.0"
description = ""
authors = ["EliasPinno <pucas946@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
fastapi = "^0.111.1"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
